--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pathofdev/react-tag-input": "^1.0.7",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.23.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.7.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
